--- a/packages/happybara/package.json
+++ b/packages/happybara/package.json
@@ -2,7 +2,7 @@
   "name": "happybara",
   "version": "1.0.0",
   "description": "Write Ruby <-> JavaScript tests.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "mocha"
   },
