--- a/packages/happybara-mocha/package.json
+++ b/packages/happybara-mocha/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "happybara",
+  "name": "happybara-mocha",
   "version": "1.0.0",
-  "description": "Write Ruby <-> JavaScript tests.",
   "main": "src/index.js",
-  "scripts": {
-    "test": "mocha"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/amireh/happybara.git"
@@ -17,9 +13,7 @@
   },
   "homepage": "https://github.com/amireh/happybara#readme",
   "peerDependencies": {
-    "chai": ""
-  },
-  "dependencies": {
-    "invariant": "2.2.2"
+    "mocha": "^2.0 || ^3.0",
+    "happybara": "^1.0.0"
   }
 }
