--- a/packages/happybara-ruby/package.json
+++ b/packages/happybara-ruby/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "happybara",
+  "name": "happybara-ruby",
   "version": "1.0.0",
-  "description": "Write Ruby <-> JavaScript tests.",
   "main": "src/index.js",
-  "scripts": {
-    "test": "mocha"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/amireh/happybara.git"
