--- a/packages/happybara-mocha/package.json
+++ b/packages/happybara-mocha/package.json
@@ -1,6 +1,6 @@
 {
   "name": "happybara-mocha",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "src/index.js",
   "repository": {
     "type": "git",
@@ -13,7 +13,7 @@
   },
   "homepage": "https://github.com/amireh/happybara#readme",
   "peerDependencies": {
-    "mocha": "^2.0 || ^3.0",
-    "happybara": "^1.0.0"
+    "happybara": "^1.0.0",
+    "mocha": "^2.0 || ^3.0"
   }
 }
