--- a/packages/happybara/package.json
+++ b/packages/happybara/package.json
@@ -1,6 +1,6 @@
 {
   "name": "happybara",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Write Ruby <-> JavaScript tests.",
   "main": "src/index.js",
   "scripts": {
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/amireh/happybara#readme",
   "peerDependencies": {
-    "chai": ""
+    "chai": "^2 || ^3"
   },
   "dependencies": {
     "invariant": "2.2.2"
