--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "example": "examples"
   },
   "devDependencies": {
+    "babel-core": "6.24.1",
+    "babel-plugin-syntax-async-functions": "6.13.0",
+    "babel-plugin-transform-regenerator": "6.24.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^6.10.3",
     "lerna": "^2.0.0-rc.2"
